过滤git的配置文件

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,10 @@ base/cn/com/egova/base/constant/SchemaConst.java
 *.sql
 *.fnc
 *.pyc
+*.properties
+out/
+rebel-remote.xml
+rebel.xml
 
 ### macOS template
 # General
