--- a/pom.xml
+++ b/pom.xml
@@ -118,7 +118,7 @@
             <version>5.1.13</version>
         </dependency>
 
-       <!--Oracle数据库驱动jar包-->
+        <!--Oracle数据库驱动jar包-->
         <dependency>
             <groupId>oracle</groupId>
             <artifactId>ojdbc6</artifactId>
@@ -197,31 +197,31 @@
         </dependency>
 
 
-       <!-- <dependency>
-            <groupId>org.apache.activemq</groupId>
-            <artifactId>activemq-client</artifactId>
-            <version>5.14.3</version>
-        </dependency>
+        <!-- <dependency>
+             <groupId>org.apache.activemq</groupId>
+             <artifactId>activemq-client</artifactId>
+             <version>5.14.3</version>
+         </dependency>
 
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-            <version>4.5.6</version>
-        </dependency>
+         <dependency>
+             <groupId>org.apache.httpcomponents</groupId>
+             <artifactId>httpclient</artifactId>
+             <version>4.5.6</version>
+         </dependency>
 
-        <dependency>
-            <groupId>xstream</groupId>
-            <artifactId>xstream</artifactId>
-            <version>1.1.2</version>
-        </dependency>
+         <dependency>
+             <groupId>xstream</groupId>
+             <artifactId>xstream</artifactId>
+             <version>1.1.2</version>
+         </dependency>
 
-        <dependency>
-            <groupId>xmlpull</groupId>
-            <artifactId>xmlpull</artifactId>
-            <version>1.1.3.1</version>
-        </dependency>-->
+         <dependency>
+             <groupId>xmlpull</groupId>
+             <artifactId>xmlpull</artifactId>
+             <version>1.1.3.1</version>
+         </dependency>-->
 
-        <!--mq集成jar包-->
+        <!--activemq集成jar包-->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jms</artifactId>
@@ -233,7 +233,7 @@
             <artifactId>activemq-all</artifactId>
             <version>5.8.0</version>
             <scope>system</scope>
-            <systemPath>D:/Application/apache-activemq-5.8.0/activemq-all-5.8.0.jar</systemPath>
+            <systemPath>D:/Application/apache-activemq-5.14.0/activemq-all-5.14.0.jar</systemPath>
         </dependency>
 
         <dependency>
@@ -254,8 +254,26 @@
             <version>4.5</version>
         </dependency>
 
+        <!--kafka集成jar包-->
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>2.2.1</version>
+            <scope>system</scope>
+            <systemPath>E:/kafka_2.11-2.2.1/libs/kafka-clients-2.2.1.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+            <version>2.2.4.RELEASE</version>
+        </dependency>
 
-
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+            <scope>compile</scope>
+        </dependency>
 
 
     </dependencies>
