spring-kafka合并修改，spring-batch记录提交

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,6 +14,11 @@
     <param-value>expdti.root</param-value>
   </context-param>
 
+  <context-param>
+    <param-name>log4jRefreshInterval</param-name>
+    <param-value>3000</param-value>
+  </context-param>
+
   <!-- Spring 配置文件位置 -->
   <context-param>
     <param-name>contextConfigLocation</param-name>
