--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
         <egova.version></egova.version>
+        <spring.batch.version>3.0.7.RELEASE</spring.batch.version>
     </properties>
 
     <dependencies>
@@ -118,12 +119,12 @@
             <version>5.1.13</version>
         </dependency>
 
-        <!--Oracle数据库驱动jar包-->
-        <dependency>
+       <!--Oracle数据库驱动jar包-->
+        <!--<dependency>
             <groupId>oracle</groupId>
             <artifactId>ojdbc6</artifactId>
             <version>11.2.0.3</version>
-        </dependency>
+        </dependency>-->
 
         <!--MyBaits框架jar包-->
         <dependency>
@@ -196,32 +197,7 @@
             <scope>test</scope>
         </dependency>
 
-
-        <!-- <dependency>
-             <groupId>org.apache.activemq</groupId>
-             <artifactId>activemq-client</artifactId>
-             <version>5.14.3</version>
-         </dependency>
-
-         <dependency>
-             <groupId>org.apache.httpcomponents</groupId>
-             <artifactId>httpclient</artifactId>
-             <version>4.5.6</version>
-         </dependency>
-
-         <dependency>
-             <groupId>xstream</groupId>
-             <artifactId>xstream</artifactId>
-             <version>1.1.2</version>
-         </dependency>
-
-         <dependency>
-             <groupId>xmlpull</groupId>
-             <artifactId>xmlpull</artifactId>
-             <version>1.1.3.1</version>
-         </dependency>-->
-
-        <!--activemq集成jar包-->
+        <!--mq集成jar包-->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jms</artifactId>
@@ -231,9 +207,7 @@
         <dependency>
             <groupId>org.apache.activemq</groupId>
             <artifactId>activemq-all</artifactId>
-            <version>5.8.0</version>
-            <scope>system</scope>
-            <systemPath>D:/Application/apache-activemq-5.14.0/activemq-all-5.14.0.jar</systemPath>
+            <version>5.14.0</version>
         </dependency>
 
         <dependency>
@@ -254,18 +228,51 @@
             <version>4.5</version>
         </dependency>
 
+        <!--Spring batch框架jar包-->
+        <dependency>
+            <groupId>org.springframework.batch</groupId>
+            <artifactId>spring-batch-core</artifactId>
+            <version>${spring.batch.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.batch</groupId>
+            <artifactId>spring-batch-infrastructure</artifactId>
+            <version>${spring.batch.version}</version>
+        </dependency>
+
+        <!-- Spring Batch unit test -->
+        <dependency>
+            <groupId>org.springframework.batch</groupId>
+            <artifactId>spring-batch-test</artifactId>
+            <version>${spring.batch.version}</version>
+        </dependency>
+
+
+
         <!--kafka集成jar包-->
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
             <version>2.2.1</version>
-            <scope>system</scope>
-            <systemPath>E:/kafka_2.11-2.2.1/libs/kafka-clients-2.2.1.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
-            <version>2.2.4.RELEASE</version>
+            <version>2.0.4.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.9.8</version>
+        </dependency>
+
+        <!--spring batch框架集成jar包-->
+        <dependency>
+            <groupId>org.springframework.batch</groupId>
+            <artifactId>spring-batch-core</artifactId>
+            <version>3.0.7.RELEASE</version>
         </dependency>
 
         <dependency>
